// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as converging gateway 1`] = `
<Fragment>
  <div
    className="arrow"
  />
  <div
    className="flow-element gateway-element converging"
  />
  <HorizontalStroke
    className="optional"
  />
</Fragment>
`;

exports[`renders correctly as diverging gateway 1`] = `
<Fragment>
  <div
    className="arrow"
  />
  <div
    className="flow-element gateway-element diverging"
  />
  <HorizontalStroke>
    text
  </HorizontalStroke>
</Fragment>
`;
